fix(checkbox): align icon correctly & remove problematic control from doc

--- a/packages/ods-react/src/components/checkbox/src/components/ods-checkbox-control/odsCheckboxControl.module.scss
+++ b/packages/ods-react/src/components/checkbox/src/components/ods-checkbox-control/odsCheckboxControl.module.scss
@@ -40,4 +40,8 @@
   &[data-focus] {
     @include focus.ods-focus();
   }
+
+  &__icon {
+    display: block;
+  }
 }
